<resources>
    <string name="API_KEY">AIzaSyDCUDjlQqJRaapcRmtdb2l7uTQh4J2oK8Q</string>


    <!--faceook-->
    <string name="facebook_app_id">2048145105447742</string>
    <string name="fb_login_protocol_scheme">fb2048145105447742</string>

    <string name="app_name">Buy - Sell</string>
    <string name="name_register">Đăng ký</string>
    <string name="error_and_check">Đã xảy ra lỗi, vui lòng kiểm tra lại</string>
    <string name="no_internet">Không có kết nối mạng, vui lòng kiểm tra lại</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="forgot">Quên mật khẩu?</string>
    <string name="new_to_buy_sell">New to Buy-Sell ?</string>

    <string name="email">Email</string>
    <string name="email_adress">Email Adress</string>
    <string name="email_avaliable_or_er">Email không hợp lệ hoặc đã tồn tại</string>
    <string name="email_avaliable_or_fail">Email không hợp lệ hoặc sai mật khẩu</string>
    <string name="dia_chi_email">Địa chỉ email</string>
    <string name="email_khong_hop_le">Email không hợp lệ</string>
    <string name="message_lay_mat_khau">Nhập Email cần thiết lập mật khẩu - Gmail Google (Chúng tôi sẽ gửi đường dẫn tới email ) </string>

    <string name="password">Password</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="notifi_password">Mật khẩu phải lớn hơn hoặc bằng 6 kí tự</string>
    <string name="notifi_confirm_password">Mật khẩu không trùng khớp</string>

    <string name="nguoi_mua_hang">Người mua hàng</string>
    <string name="nguoi_ban_hang">Người bán hàng</string>
    <string name="full_name">Tên đầy đủ</string>
    <string name="thanh_cong">Thành công</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="vui_long_nhap_ten_doanh_nghiep">Vui lòng nhập tên doanh nghiệp</string>
    <string name="register">Đăng kí</string>
    <string name="ten_doanh_nghiep">Tên doanh nghiệp</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="warning_full_name">Tên phải lớn hơn 6 ký tự</string>
    <string name="sdt_khong_hop_le">Số điện thoại không hợp lệ</string>
    <string name="gui_lai_ma">Gửi lại</string>
    <string name="xac_nhan_ma">Xác nhận</string>
    <string name="thiet_lap_mat_khau">Thiết lập lại mật khẩu</string>
    <string name="dang_bai">ĐĂNG BÀI</string>
    <string name="huy">Hủy</string>
    <string name="message_not_acccount">Bạn chưa đăng nhập \n để mua (bán) hàng</string>

    //sell
    <string name="tao_bai_dang">Tạo bài đăng</string>
    <string name="nhap_tieu_de">Nhập tiêu đề tìm kiếm (nhỏ hơn 255 ký tự)</string>
    <string name="nhap_mota">Mô tả sản phẩm</string>
    <string name="them_anh">Thêm ảnh</string>
    <string name="loai">Loại</string>
    <string name="muc">Mục</string>
    <string name="message_huy_bai_viet">Bạn có chắc chắn muốn hủy bài không?</string>
    <string name="khong_cho_phep_truy_cap_may_anh">Chưa cho phép truy cập vào thư mục ảnh</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="xong">XONG</string>
    <string name="chon_hang_muc">Chọn hạng mục</string>
    <string name="chua_nhap_du_lieu">Chưa nhập đủ dữ liệu</string>
    <string name="tieu_de_qua_lon">Tiêu đề có dữ liệu quá lớn</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="don_hang_cua_ban">Đơn hàng của bạn</string>

    <string name="error">Đã có lỗi xảy ra</string>
    <string name="ma">Mã</string>
    <string name="luu">Lưu</string>
    <string name="mua_hang">Mua hàng</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="thong_bao">Thông báo</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="trang_ca_nhan">Trang cá nhân</string>
    <string name="chinh_sua">Chỉnh sửa</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="sdt">Số điện thoại</string>
    <string name="dang_ki">Đăng kí</string>
    <string name="chinh_sua_chi_tiet">CHỈNH SỬA CHI TIẾT</string>
    <string name="dont_phone_number">Chưa có số điện thoại</string>
    <string name="dont_address">Chưa có địa chỉ</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công</string>
    <string name="khong_the_cap_nhat">Không thể cập nhật</string>
    <string name="error_retry">Xảy ra lỗi, thử lại</string>
    <string name="title_activity_maps_sell">Map</string>
    <string name="dont_have_product">Không có sản phẩm</string>
    <string name="dont_have_account">Không có tài khoản</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="san_pham_doanh_nghiep">Sản phẩm doanh nghiệp</string>
    <string name="select_photo">Select photo</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="xem_truoc_anh">Xem trước ảnh</string>
    <string name="xac_nhan_call">Bạn có muốn gọi tới số điện thoại"\n" </string>
    <string name="thay_doi">Thay đổi</string>
    <string name="san_pham_xu_ly_boi">Sản phẩm xử lý bởi</string>

    <string name="tien_hanh_mua_hang">Tiến hành mua hàng ngay</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
    <string name="phuong_thuc_mua">Phương thức mua hàng</string>
    <string name="phuong_thuc_thanh_toan">Phương thức liên hệ</string>

    <string name="thay_doi_dia_chi">Thay đổi địa chỉ</string>
    <string name="thay_doi_sdt">Thay đổi số điện thoại</string>
    <string name="ban_co_muon_dn_dk_khong">Bạn có đăng nhập (đăng kí) không?</string>
    <string name="da_gui">Đã gửi</string>
    <string name="mat_khau_khong_trung_khop">Mật khẩu không trùng khớp</string>
    <string name="chua_co_ma">Chưa có mã</string>
    <string name="qua_so_lan_cho_phep">Quá số lần qua phép</string>
    <string name="dang_gui_ma_vui_long_cho">Đang gửi mã, xin vui lòng chờ!</string>
    <string name="khong_the_mua_sp">Không thể mua sản phẩm</string>
    <string name="chua_dang_nhap">Chưa đăng nhập</string>
    <string name="chua_chon_muc">Chưa chọn mục</string>
    <string name="tong_so_dia_diem">Tổng số địa điểm</string>
    <string name="khong_the_hien_thi_khoang_cach">Không thể hiện thị khoảng cách</string>
    <string name="gia">Giá</string>
    <string name="so_luong">Số lượng</string>
    <string name="cap_nhat_dia_chi">Cập nhật địa chỉ</string>
    <string name="dont_have_address_and_update">Chưa có địa chỉ, cập nhật địa chỉ?</string>
    <string name="da_xoa">Đã xóa</string>
    <string name="xoa_don_hang">Xoá đơn hàng</string>
    <string name="xac_nhan_xoa_don_hang">Bạn có muốn xóa đơn hàng này không</string>
    <string name="goi_dien_truc_tiep">Gọi điện trực tiếp</string>
    <string name="gui_tin_nhan">Gửi tin nhắn</string>
    <string name="tinh_nang_vip">Tính năng VIP</string>
    <string name="vip_dang_phat_trien">Tính năng này đang phát triển</string>
    <string name="noi_dung">Nội dung</string>
    <string name="meesage_feedback">Cảm ơn vì bạn đã quan tâm tới ứng dụng của chúng tôi, hãy gửi cho chúng tôi biết vấn đề bạn đang mắc phải. Sẽ rất tuyệt vời nếu bạn có ý tưởng hay. Xin cảm ơn!</string>

    <string name="phan_hoi">Phản hồi</string>
    <string name="phien_ban">Phiên bản:</string>

    <string name="info_dev">https://www.facebook.com/vuduy309</string>
    <string name="info_app">Ứng dụng được tạo bởi: VuDuy309</string>
    <string name="info_us">Email chúng tôi: buysellvn309@gmail.com</string>
    <string name="ban_muon_dang_xuat_khong">Bạn có chắc chắn muốn đăng xuất hay không?</string>
    <string name="scanning">Đang quét </string>
    <string name="da_gui_toi_email_cua_ban">Đã gửi tới email của bạn</string>
    <string name="chi_duoc_chon_bon_anh">Chỉ được chọn tối đa 4 ảnh</string>
    <string name="gui">Gửi</string>
    <string name="chinh_sua_bai_viet">Chỉnh sửa bài viết</string>
    <string name="tieu_de">Tiêu đề :</string>
    <string name="mo_ta">Mô tả :</string>
    <string name="gia_sell">Giá:</string>
    <string name="van_de">Vấn đề</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="thong_bao_mua_hang">Thông báo mua hàng</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="gui_ma">Gửi mã</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="quet_quanh_day">Quét quanh đây</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="tim_kiem_san_pham">Tìm kiếm sản phẩm</string>
    <string name="tim_kiem_doanh_nghiep">Tìm kiếm doanh nghiệp</string>
    <string name="doanh_nghiep">Doanh nghiệp</string>
    <string name="thay_doi_thong_tin">Thay đổi thông tin</string>
    <string name="ten_change_info">Tên :</string>
    <string name="sdt_change_info">Số điện thoại :</string>
    <string name="dia_chi_change_info">Địa chỉ :</string>
    <string name="nguoi_mua">Người mua:</string>
    <string name="dia_chi_info_cart">Địa chỉ:</string>
    <string name="don_hang_info_cart">Đơn hàng:</string>
    <string name="sdt_cart">SDT:</string>
    <string name="so_luong_cart">Số lượng:</string>
    <string name="thoi_gian_cart">Thời gian:</string>
    <string name="quang_duong_mua_hang">Quãng đường khi mua hàng</string>
    <string name="quang_duong_gio_hang">Quãng đường trong giỏ hàng</string>

</resources>
