<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/large" />


    <EditText
        android:id="@+id/edt_emal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pading_large"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="@dimen/normal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pading_normal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/normal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_notifi_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifi_password"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text_size"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pading_very_large"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pading_small"
            android:layout_weight="1"
            android:background="@drawable/bg_button_forgot"
            android:text="@string/forgot"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pading_small"
            android:layout_weight="1"
            android:background="@drawable/bg_button_signin_before"
            android:clickable="false"
            android:text="@string/sign_in"
            android:textColor="@color/grey_divider" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/pading_very_large"
        android:background="@color/grey_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_to_buy_sell"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <Button
            android:id="@+id/btn_refister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pading_small"
            android:layout_weight="1"
            android:background="@drawable/bg_button_signin_after"
            android:text="Register"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:drawableLeft="@drawable/ic_warning"
        android:drawablePadding="@dimen/pading_normal"
        android:text="@string/email_avaliable_or_fail"
        android:textColor="@color/red"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>