<?xml version="1.0" encoding="utf-8"?>
<com.example.user.banhangonline.views.DrawerContent xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ln_open_drawer"
    app:layoutDescription="@xml/scene_open_drawer"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ln_account"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/bg_account"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tv_trang_chu"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/pading_normal"
            android:background="@drawable/bg_boder_img"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_product"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pading_normal"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_trang_chu"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_home_selector"
        android:text="@string/trang_chu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_account" />

    <TextView
        android:id="@+id/tv_trang_ca_nhan"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_face_selector"
        android:text="@string/trang_ca_nhan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trang_chu" />

    <!--<TextView-->
    <!--android:id="@+id/tv_thong_bao"-->
    <!--style="@style/normalText"-->
    <!--android:layout_margin="@dimen/pading_small"-->
    <!--android:drawableLeft="@drawable/ic_notifications"-->
    <!--android:text="@string/thong_bao" />-->

    <TextView
        android:id="@+id/tv_cai_dat"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_settings_selector"
        android:text="@string/cai_dat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trang_ca_nhan" />

    <TextView
        android:id="@+id/tv_tinh_nang_vip"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_vip_selector"
        android:text="@string/tinh_nang_vip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cai_dat" />

    <TextView
        android:id="@+id/tv_feedback"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_feedback_selector"
        android:text="@string/phan_hoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tinh_nang_vip" />

    <TextView
        android:id="@+id/tv_dang_xuat"
        style="@style/normalText"
        android:layout_margin="@dimen/pading_small"
        android:drawableStart="@drawable/ic_logout_selector"
        android:text="@string/dang_xuat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feedback" />

    <TextView
        android:id="@+id/tv_version_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pading_normal"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />


</com.example.user.banhangonline.views.DrawerContent>