<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D000000">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/pading_large"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_change_phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="@dimen/pading_small"
                android:text="@string/thay_doi_sdt"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size" />

            <EditText
                android:id="@+id/edt_change_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/transparent"
                android:hint="@string/sdt"
                android:padding="@dimen/normal"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_change_phone_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_click_white"
                    android:padding="@dimen/pading_small"
                    android:text="@string/huy"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/dialog_change_phone_done"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_click_white"
                    android:padding="@dimen/pading_small"
                    android:text="@string/xong"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>